Index page updates

--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
     </style>
 </head>
 <body>
-    <h1>Julian's Tools</h1>
+    <h1>tools.julianwyngaard.dev</h1>
+
     <p class="intro">A collection of single-file HTML tools. Each tool runs entirely in your browser with no server-side processing.</p>
+
+    <p class="intro">They are predominantly utility and experimental low-stakes tools written predominately by LLM's.</p>
+
+    <p class="intro">The <a href="colophon.html">colophon</a> lists commit messages and transcripts for every tool.</p>
 
     <section>
         <h2>Data &amp; Text</h2>
