--- a/json-formatter.html
+++ b/json-formatter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Formatter - Julian's Tools</title>
+    <title>JSON Formatter - tools.julianwyngaard.dev</title>
     <style>
         * { box-sizing: border-box; }
         body {
@@ -119,7 +119,7 @@
     <div id="status" class="status"></div>
 
     <footer>
-        <a href="index.html">Julian's Tools</a> |
+        <a href="index.html">tools.julianwyngaard.dev</a> |
         <a href="https://github.com/julianwyngaard/logitrade-html-tools">Source</a>
     </footer>
 
